concord_macros/tests/trybuild/fail/codegen/reserved_nocontent_unsupported.stderr
error: `NoContent` endpoint I/O is reserved but not supported yet
 --> tests/trybuild/fail/codegen/reserved_nocontent_unsupported.rs:8:12
  |
8 |         -> NoContent
  |            ^^^^^^^^^
